fix(Sheet): fix double scroll on content with margin

--- a/src/components/Sheet/Sheet.scss
+++ b/src/components/Sheet/Sheet.scss
@@ -86,6 +86,10 @@ $block: '.#{variables.$ns}sheet';
         }
     }
 
+    &__inner-content {
+        overflow: auto;
+    }
+
     &__sheet-content-title {
         padding-block-end: 8px;
         font-size: var(--g-text-body-2-font-size);
