--- a/src/components/Sheet/__stories__/WithMenuShowcase/WithMenuShowcase.scss
+++ b/src/components/Sheet/__stories__/WithMenuShowcase/WithMenuShowcase.scss
@@ -5,4 +5,9 @@
     &__show-btn {
         width: max-content;
     }
+
+    &__menu {
+        margin: 10px 0;
+        padding: 5px 0;
+    }
 }
